--- a/app/Resources/views/main/oiseaux.html.twig
+++ b/app/Resources/views/main/oiseaux.html.twig
@@ -4,8 +4,6 @@
 {% block stylesheets %}
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('css/oiseaux.css') }}">
-
-
 {% endblock %}
 
 {% block body %}
@@ -35,7 +33,7 @@
             <span>Trouvez vite les oiseaux proches de vous et apprenez à les connaître!</span>
         </div>
 
-        <div id="map">
+        <div id="map" class="mb-4">
         </div>
 
         {# Liste des oiseaux dans la bdd #}
@@ -64,7 +62,6 @@
         </div>
 
     </div>
-
 </section>
 
 {% endblock %}
