--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -56,9 +56,18 @@
                     </div>
                 {% endfor %}
                 {{ form_start(form) }}
-                {{ form_row(form._username) }}
-                {{ form_row(form._password) }}
-
+                {{ form_row(form._username,{
+                   'label' : 'Pseudo',
+                   'attr' : {
+                   'placeholder' : 'Pseudo *'
+                   }
+                }) }}
+                {{ form_row(form._password,{
+                   'label' : 'Mot de passe',
+                   'attr' : {
+                   'placeholder' : 'Mot de passe *'
+                   }
+                }) }}
 
                 <div class="row text-center">
                     <p class="col-12 col-md-6 mb-4" data-toggle="modal" data-target="#forgetPassModal">Se souvenir de moi</p>
@@ -71,7 +80,43 @@
                 {{ form_end(form) }}
             </div>
 
-            <div class="modal" id="forgetPassModal">
+            {#-----MODAL DELETE USER-----#}
+            <div class="modal modal-alert pt-5" id="forgetPassModal">
+                <div class="close-wrap d-flex mx-auto align-items-center justify-content-center">
+                    <button type="button" class="close-button text-center mb-1" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+                <div class="modal-dialog">
+
+                    <div class="modal-content col-10 col-md-8 col-lg-6 py-4 mx-auto">
+                        <div class="d-flex flex-column">
+                            <div class="modal-title heading justify-content-center mb-3">
+                                <h2>Mot de passe oublié ?</h2>
+                                <p>Nous pouvons y remédier !</p>
+                            </div>
+                            <div class="text-center mx-auto">
+                                <i class="fa fa-key fa-5x mb-3"></i>
+                                <p>Un nouveau mot de passe vous sera envoyé par email</p>
+                                <form action="{{ path('reset') }}" method="POST">
+                                    <div class="form-group">
+                                        <label for="username">Pseudo</label>
+                                        <input type="text" name="username" class="form-control" placeholder="Pseudo">
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="d-flex flex-column flex-sm-row justify-content-around mx-auto">
+                                <button class="btn btn-outline" data-dismiss="modal">Annuler</button>
+                                <button class="btn btn-primary ml-0 ml-sm-3 mt-3 mt-sm-0" type="submit">Confirmer</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {#-----END MODAL DELETE USER-----#}
+
+
+            {# <div class="modal" id="forgetPassModal">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -93,7 +138,7 @@
 
                     </div>
                 </div>
-            </div>
+            </div> #}
 
         </div>
     </div>
