--- a/app/Resources/views/user/register.html.twig
+++ b/app/Resources/views/user/register.html.twig
@@ -46,14 +46,28 @@
 
                 {{ form_start(form) }}
                     {{ form_row(form.username,{
-                       'label' : 'Pseudo'
+                       'label' : 'Pseudo',
+                       'attr' : {
+                           'placeholder' : 'Pseudo *'
+                       }
                     }) }}
-                    {{ form_row(form.email) }}
+                    {{ form_row(form.email,{
+                        'label' : 'Email',
+                        'attr' : {
+                            'placeholder' : 'Email *'
+                        }
+                    }) }}
                     {{ form_row(form.plainPassword.first, {
-                        'label' : 'Mot de passe'
+                        'label' : 'Mot de passe',
+                        'attr' : {
+                            'placeholder' : 'Mot de passe *'
+                        }
                     }) }}
                     {{ form_row(form.plainPassword.second, {
-                        'label' : 'Confirmez votre mot de passe'
+                        'label' : 'Confirmez votre mot de passe',
+                        'attr' : {
+                            'placeholder' : 'Confirmez votre mot de passe *'
+                        }
                     }) }}
 
                     <div class="text-center">
