pb commit observation

--- a/app/Resources/views/main/observation.html.twig
+++ b/app/Resources/views/main/observation.html.twig
@@ -102,7 +102,7 @@
             </div>
         </div>
 
-        <div id="dialog" title="Selectionnez le lieu de votre observation" style="display: none">
+        <div id="dialog" title="Déplacez-moi !" style="display: none">
             <div id="map"></div>
         </div>
 
