GoogleMaps geolocalisation + récupération des données selectinnées par l'utilisateur terminé

--- a/app/Resources/views/main/observation.html.twig
+++ b/app/Resources/views/main/observation.html.twig
@@ -116,6 +116,7 @@
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDM-LWXFSraqzHfltfjrg0aIgHYdDp9EpI">
     </script>
     <script src="{{ asset('js/jquery-ui.min.js') }}"></script>
+    <script src="{{ asset('js/jquery.ui.dialog-clickoutside.js') }}"></script>
     <script src="{{ asset('js/observation.js') }}"></script>
     <script src="{{ asset('js/datepicker.js') }}"></script>
 {% endblock %}
