Partie observation quasiment termin"

--- a/app/Resources/views/main/observation.html.twig
+++ b/app/Resources/views/main/observation.html.twig
@@ -105,8 +105,8 @@
 
                     {#AFFICHAGE DES OISEAUX TROUVÉS PAR LE FILTRE#}
                     {#Voir observation.css#}
-                    <div class="flex-wrap flex-column bird-observation-display comm-display p-0">
-                        <div class="d-flex flex-nowrap align-items-center comm m-3">
+                    <div class="flex-wrap flex-column bird-observation-display comm-display p-0" id="aidez-moi">
+                        {#<div class="d-flex flex-nowrap align-items-center comm m-3">
                             <img src="" alt="" class="searching_bird rounded-circle">
                             <div class="col-12 pl-3">
                                 <div class="col-12 px-0">
@@ -119,7 +119,7 @@
                                     <span class="time"></span>
                                 </div>
                             </div>
-                        </div>
+                        </div>#}
                     </div>
                 </div>
 
